--- a/stylie.css
+++ b/stylie.css
@@ -159,7 +159,7 @@ background-color: var(--dark-gray);
 }
 /*home end*/
 
-#menu {
+#menu, #footer .footer-top{
   background-color: var(--bg-secondary);
   padding: 6rem 0;
 }
@@ -260,15 +260,42 @@ width: 100%;
 height: 100%;
 }
 
+#footer .footer-top{
+  background: url(./kuvat/footer-bg.png);
+  color: #fff;
+}
+#footer .footer-top .row{
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr;
+  gap: 3rem;
+}
+#footer .footer-top .row .col h3{
+  color: #fff;
+  margin-bottom: 15px;
+
+}
+  #footer .footer-top .row .col p{
+  width: 400px;
+  line-height: 1.6;
 
 
+}
+  
+  #footer .footer-top .row .col ul li {
+  margin: 10px 0;
+}
 
+ #footer .footer-top .row .col ul li i {
+  margin-right: 10px;
+}
+ #footer .footer-top .row .col ul li  a{
+  color: #fff;
+}
 
-
-
-
-
-
-
-
+#footer .copyright{
+  background-color: var(--dark-gray);
+  padding: 30px  0;
+  text-align: center;
+  color: #fff;
+}
 
