--- a/stylie.css
+++ b/stylie.css
@@ -159,6 +159,12 @@ background-color: var(--dark-gray);
 }
 /*home end*/
 
+
+
+
+
+
+
 #menu, #footer .footer-top{
   background-color: var(--bg-secondary);
   padding: 6rem 0;
@@ -179,6 +185,17 @@ background-color: var(--dark-gray);
   padding: 20px;
   margin-bottom: 20px;
   background: #fff;
+  transition: all 0.3s ease;
+}
+#menu .item:hover {
+  background-color: var(--light-brown); 
+  border-color:none;    
+}
+
+#menu .item:hover h3,
+#menu .item:hover p,
+#menu .item:hover .price {
+  color: #fff; 
 }
 
 #menu .item img {
@@ -212,28 +229,41 @@ background-color: var(--dark-gray);
   color: var(--light-brown);
   white-space: nowrap;
 }
-#yhteystiedot {
+
+
+
+
+
+
+
+
+
+
+
+
+
+#tilaa {
   background-color: var(--bg-color);
 }
 
-#yhteystiedot .row {
+#tilaa .row {
 display: grid;
 grid-template-columns: 2fr 1.4fr;
 margin-top: 2rem;
 }
 
-#yhteystiedot .row .contact-content{
+#tilaa .row .contact-content{
   background-color: #fff;
   padding: 2.5rem;
 }
-#yhteystiedot .row .contact-content h3{
+#tilaa .row .contact-content h3{
 font-size: 26px;
 text-transform: uppercase;
 font-weight: 500;
 }
 
-#yhteystiedot .row .contact-content form input,
-#yhteystiedot .row .contact-content form input{
+#tilaa .row .contact-content form input,
+#tilaa .row .contact-content form input{
   
 display: block;
 width: 100%;
@@ -242,7 +272,7 @@ padding: 15px;
 border: 1px solid #ccc;
 }
 
-#yhteystiedot .row .contact-content form .btn-submit{
+#tilaa .row .contact-content form .btn-submit{
   background-color: var(--black);
   width: 100%;
   color: #fff;
@@ -252,50 +282,69 @@ border: 1px solid #ccc;
   border: none;
   transition: all 0.3s ease;
 }
-#yhteystiedot .row .contact-content form .btn-submit:hover{
+#tilaa .row .contact-content form .btn-submit:hover{
   background-color: var(--light-brown);
 }
-#yhteystiedot .map iframe{
+#tilaa .map iframe{
 width: 100%;
 height: 100%;
 }
 
-#footer .footer-top{
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#yhteystiedot .footer-top{
   background: url(./kuvat/footer-bg.png);
   color: #fff;
 }
-#footer .footer-top .row{
+#yhteystiedot .footer-top .row{
   display: grid;
   grid-template-columns: 2fr 1fr 1fr;
   gap: 3rem;
 }
-#footer .footer-top .row .col h3{
+#yhteystiedot .footer-top .row .col h3{
   color: #fff;
   margin-bottom: 15px;
 
 }
-  #footer .footer-top .row .col p{
+  #yhteystiedot .footer-top .row .col p{
   width: 400px;
   line-height: 1.6;
 
 
 }
   
-  #footer .footer-top .row .col ul li {
+  #yhteystiedot .footer-top .row .col ul li {
   margin: 10px 0;
 }
 
- #footer .footer-top .row .col ul li i {
+ #yhteystiedot .footer-top .row .col ul li i {
   margin-right: 10px;
 }
- #footer .footer-top .row .col ul li  a{
+ #yhteystiedot .footer-top .row .col ul li  a{
   color: #fff;
 }
 
-#footer .copyright{
+#yhteystiedot .copyright{
   background-color: var(--dark-gray);
   padding: 30px  0;
   text-align: center;
   color: #fff;
 }
 
+ #yhteystiedot .footer-top .row .col ul li  a:hover{
+  color: var(--light-brown);
+}
